# dataship-spark-plat-v0

./: .env.example  .gitignore  AGENTS.md  APEX_FLOW_PRESENTATION.html  CAPTAIN_ACTIONS.md  MEMORY.md  Makefile  PODS_ALIGNMENT.html  PODS_RESPONSIBILITIES.md  README.md  TECHNICAL_SPECIFICATION.md  VALIDATION.md  agent_readme.md  apex_defesa_geradores_desacoplados_final.html  job_demo.meta.json  job_demo.py  job_v2.py  pyproject.toml  real_log.ndjson  real_log.zstd  requirements.txt  run_slice.sh  scenarios_all.yaml  synthetic_log.ndjson
.github/workflows/: oracle-weekly.yml  scenario-gate.yml
apex/: apexlib.py  apexlib.py.bak
docs/: apex-v4-lineage.md  architecture.md  machine-requirements.md  next-steps.md  operations.md
docs/assets/: spark-platform-v0-visual-prompt.md
docs/dev-design/: architecture.md  compatibility.md  design-pattern-v0-disccusion.md  operations.md
docs/logs-info/: README.md  clickstack-guide.md  current-tables.md  exploration-roadmap.md  spark-event-log-coverage.md
docs/old-brainstorm/: 00-repo-validation.md  01-target-versions.md  02-compose-submit-connect.md  03-observability-model.md  04-compatibility-test-log.md  05-architecture-risks.md  README.md
generators/: code_generator.py  code_generator.py.bak  plan_generator.py  plan_generator_no_yaml.py
oracle/: compare.py
scenarios/: skew_on_join_30x.yaml
src/apps/: template.md
src/config/: lakehouse.yaml
src/spark_platform/: __init__.py
tests/: test_config_loader.py  test_io_read.py  test_io_write.py  test_jobs_base.py  test_slice.py
watchers/: skew_watcher.py
(+18 files in other folders)
